--- a/pages/Makaronilaatikko.html
+++ b/pages/Makaronilaatikko.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Maailman paras makaronilaatikko!!!</h1>
-    <img src="../img/makaronilaatikko.jpg">
+    <img src="../img/makaronilaatikko.jpg" alt="herkullisen näköinen makaronilaatikko">
     <p>Makaronilaatikko on suomalaisten herkkua! Tällä reseptillä saat kuvan mukaisen herkullisen laatikon.</p>
     <p>Ainexet:</p>
     <ul>
