finish savulohipasta page and fix picture sizes
Made all the pictures 800 pixels wide for consistensy

--- a/pages/Makaronilaatikko.html
+++ b/pages/Makaronilaatikko.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Maailman paras makaronilaatikko!!!</h1>
-    <img src="../img/makaronilaatikko.jpg" alt="herkullisen näköinen makaronilaatikko">
+    <img src="../img/makaronilaatikko.jpg" alt="herkullisen näköinen makaronilaatikko" width="800">
     <p>Makaronilaatikko on suomalaisten herkkua! Tällä reseptillä saat kuvan mukaisen herkullisen laatikon.</p>
     <p>Ainexet:</p>
     <ul>
