--- a/pages/Nistipata.html
+++ b/pages/Nistipata.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Maailman paras nistipata!!!</h1>
-    <img src="../img/nistipata.png" alt="Herkullinen nistipata">
+    <img src="../img/nistipata.png" alt="Herkullinen nistipata" width="800">
     <p>Nistipata on suomalaisten nistien herkkua! Tällä reseptillä saat kuvan mukaisen herkullisen padan.</p>
     <p>Ainexet:</p>
     <ul>
