add pictures and css

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reseptisivu</title>
+    <link href="style.css" rel="stylesheet"
 </head>
 <body>
-    <h1>Lemppari safkat</h1>
-    <ul>
+    <h1 class="title">Lemppari safkat</h1>
+    <ul class="list">
         <li><a href="pages/Makaronilaatikko.html">Makaronilaatikko</a></li>
         <li><a href="pages/Nistipata.html">Nistipata</a></li>
         <li><a href="pages/Savulohipasta.html">Savulohipasta</a></li>
     </ul>
+   <div> <img src="img/kokki.jpg" alt="happy chef" width="800"> </div>
 </body>
 </html>
