--- a/pages/Makaronilaatikko.html
+++ b/pages/Makaronilaatikko.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Maailman paras makaronilaatikko!!!</h1>
-    <img src="../img/makaronilaatikko.jpg" alt="herkullisen näköinen makaronilaatikko" width="800">
-    <p>Makaronilaatikko on suomalaisten herkkua! Tällä reseptillä saat kuvan mukaisen herkullisen laatikon.</p>
-    <p>Ainexet:</p>
-    <ul>
+    <h1 class="title">Maailman paras makaronilaatikko!!!</h1>
+    <div>
+        <img src="../img/makaronilaatikko.jpg" alt="herkullisen näköinen makaronilaatikko" width="800">
+        <img class="pienempi" src="../img/kokki2.png" alt="chef" width="400px">
+    </div>
+    <div class="imgcont">
+        <div class="arvostelut">Vahvimmat suositteluni tälle reseptille! Aivan kuvan näköinen herkku! <br> -Kokki </div>
+    </div>
+    <p class="desc">Makaronilaatikko on suomalaisten herkkua! Tällä reseptillä saat kuvan mukaisen herkullisen laatikon.</p>
+    <p class="ala">Ainexet:</p>
+    <ul class="list">
         <li> 6dl makaronia</li>
         <li>400g jauheliha</li>
         <li>1 sipuli</li>
         <li>3 kananmunaa</li>
         <li>20dl maito</li>
     </ul>
-    <p>Ohjeet:</p>
-    <ol>
+    <p class="ala">Ohjeet:</p>
+    <ol class="list">
         <li>Keitä makaronit 12min</li>
         <li>Paista jauheliha ja sipuli pannulla</li>
         <li>Kaada jauheliha ja makaronit vuokaan ja lisää kananmunat</li>
