--- a/pages/Makaronilaatikko.html
+++ b/pages/Makaronilaatikko.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <h1 class="title">Maailman paras makaronilaatikko!!!</h1>
-    <div>
-        <img src="../img/makaronilaatikko.jpg" alt="herkullisen näköinen makaronilaatikko" width="800">
-        <img class="pienempi" src="../img/kokki2.png" alt="chef" width="400px">
+    <div class="kokkicont">
+        <img class="pienempi" src="../img/kokki2.png" alt="chef">
     </div>
     <div class="imgcont">
         <div class="arvostelut">Vahvimmat suositteluni tälle reseptille! Aivan kuvan näköinen herkku! <br> -Kokki </div>
@@ -28,8 +27,8 @@
     <ol class="list">
         <li>Keitä makaronit 12min</li>
         <li>Paista jauheliha ja sipuli pannulla</li>
-        <li>Kaada jauheliha ja makaronit vuokaan ja lisää kananmunat</li>
-        <li>Sekoita ja kypsennä uunissa 1 tunti 200 asteessa</li>
+        <li>Kaada jauheliha ja makaronit vuokaan ja lisää kananmunat sekä maito</li>
+        <li>Sekoita ja virtsaa astiaan</li>
     </ol>
 </body>
 </html>
